--- a/views/room.ejs
+++ b/views/room.ejs
@@ -31,7 +31,8 @@
       display: block;
       margin: 0px auto;
       height: 400px;
-      width: 600px;
+      width: 800px;
+      background: black;
     }
 
     @media(max-width:767px) {
