--- a/views/room.ejs
+++ b/views/room.ejs
@@ -13,7 +13,7 @@
     crossorigin="anonymous"></script> -->
   <!-- <script defer src="https://unpkg.com/peerjs@1.3.1/dist/peerjs.min.js"></script> -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/peerjs/1.3.1/peerjs.js"></script>
-  <script src="/socket.io/socket.io.js" defer></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/3.0.1/socket.io.min.js"></script>
   <script src="script.js" defer></script>
   <title>Document</title>
   <style>
