--- a/views/room.ejs
+++ b/views/room.ejs
@@ -8,9 +8,16 @@
   <script>
     const ROOM_ID = "<%= roomId %>"
   </script>
+
   <script src="https://unpkg.com/peerjs@1.3.1/dist/peerjs.min.js" defer></script>
   <script src="/socket.io/socket.io.js" defer></script>
   <script src="script.js" defer></script>
+  <link href="https://vjs.zencdn.net/7.10.2/video-js.css" rel="stylesheet" />
+  <script src="https://vjs.zencdn.net/7.10.2/video.min.js"></script>
+  <link href="https://unpkg.com/video.js@7/dist/video-js.min.css" rel="stylesheet" />
+
+  <!-- City -->
+  <link href="https://unpkg.com/@videojs/themes@1/dist/city/index.css" rel="stylesheet" />
   <title>Document</title>
   <style>
     body {
@@ -48,10 +55,21 @@
       object-fit: contain;
     }
 
+
+    #own-video-grid #my-video {
+      height: 400px;
+      width: 800px;
+    }
+
     #video-grid {
       display: grid;
       grid-template-columns: repeat(auto-fill, 300px);
       grid-auto-rows: 300px;
+    }
+
+    #video-grid #my-video {
+      height: 300px;
+      width: 300px;
     }
 
     video {
@@ -103,13 +121,31 @@
 
 <body>
   <div id='header'>Welcome to Live streaming using Node js</div>
-  <div id="screen-share">
+  <!-- <div id="screen-share">
     <p>Click the Start Capture button to begin.</p>
     <p><button id="start">Start Capture</button>&nbsp;<button id="stop">Stop Capture</button></p>
     <video id="video" autoplay></video>
+  </div> -->
+
+  <div id="own-video-grid">
+    <video id="my-video" class="video-js vjs-theme-city" controls preload="auto"
+      poster="https://image.shutterstock.com/image-vector/vector-live-stream-icon-flat-260nw-1282569241.jpg"
+      data-setup="{}">
+      <!-- <source
+        src="https://storage.googleapis.com/bell-3_first_bucket/The%20Pursuit%20of%20Happyness%20(8_8)%20Movie%20CLIP%20-%20Final%20Scene_%20Chris%20is%20Hired%20(2006)%20HD.mp4" /> -->
+    </video>
+
   </div>
-  <div id="own-video-grid"></div>
-  <div id="video-grid"></div>
+  <div id="video-grid">
+    <video id="my-video" class="video-js vjs-theme-city" controls preload="auto"
+      poster="https://image.shutterstock.com/image-vector/vector-live-stream-icon-flat-260nw-1282569241.jpg"
+      data-setup="{}">
+      <!-- <source
+        src="https://storage.googleapis.com/bell-3_first_bucket/The%20Pursuit%20of%20Happyness%20(8_8)%20Movie%20CLIP%20-%20Final%20Scene_%20Chris%20is%20Hired%20(2006)%20HD.mp4"
+        type="video/mp4" /> -->
+    </video>
+
+  </div>
 </body>
 
 </html>
