--- a/views/room.ejs
+++ b/views/room.ejs
@@ -12,13 +12,11 @@
   <script src="https://unpkg.com/peerjs@1.3.1/dist/peerjs.min.js" defer></script>
   <script src="/socket.io/socket.io.js" defer></script>
   <script src="script.js" defer></script>
-  <link href="https://vjs.zencdn.net/7.10.2/video-js.css" rel="stylesheet" />
+  <!-- <link href="https://vjs.zencdn.net/7.10.2/video-js.css" rel="stylesheet" />
   <script src="https://vjs.zencdn.net/7.10.2/video.min.js"></script>
   <link href="https://unpkg.com/video.js@7/dist/video-js.min.css" rel="stylesheet" />
-
-  <!-- City -->
-  <link href="https://unpkg.com/@videojs/themes@1/dist/city/index.css" rel="stylesheet" />
-  <title>Document</title>
+  <link href="https://unpkg.com/@videojs/themes@1/dist/city/index.css" rel="stylesheet" /> -->
+  <title>Video Calling Website</title>
   <style>
     body {
       margin: 0px;
@@ -127,24 +125,17 @@
     <video id="video" autoplay></video>
   </div> -->
 
-  <div id="own-video-grid">
-    <video id="my-video" class="video-js vjs-theme-city" controls preload="auto"
-      poster="https://image.shutterstock.com/image-vector/vector-live-stream-icon-flat-260nw-1282569241.jpg"
-      data-setup="{}">
-      <!-- <source
-        src="https://storage.googleapis.com/bell-3_first_bucket/The%20Pursuit%20of%20Happyness%20(8_8)%20Movie%20CLIP%20-%20Final%20Scene_%20Chris%20is%20Hired%20(2006)%20HD.mp4" /> -->
-    </video>
+  <!-- <video id="my-video" class="video-js vjs-theme-city" controls preload="auto"
+  poster="https://image.shutterstock.com/image-vector/vector-live-stream-icon-flat-260nw-1282569241.jpg"
+  data-setup="{}">
+  <source
+    src="https://storage.googleapis.com/bell-3_first_bucket/The%20Pursuit%20of%20Happyness%20(8_8)%20Movie%20CLIP%20-%20Final%20Scene_%20Chris%20is%20Hired%20(2006)%20HD.mp4"
+    type="video/mp4" />
+  </video> -->
 
+  <div id="own-video-grid">
   </div>
   <div id="video-grid">
-    <video id="my-video" class="video-js vjs-theme-city" controls preload="auto"
-      poster="https://image.shutterstock.com/image-vector/vector-live-stream-icon-flat-260nw-1282569241.jpg"
-      data-setup="{}">
-      <!-- <source
-        src="https://storage.googleapis.com/bell-3_first_bucket/The%20Pursuit%20of%20Happyness%20(8_8)%20Movie%20CLIP%20-%20Final%20Scene_%20Chris%20is%20Hired%20(2006)%20HD.mp4"
-        type="video/mp4" /> -->
-    </video>
-
   </div>
 </body>
 
