--- a/views/room.ejs
+++ b/views/room.ejs
@@ -117,7 +117,6 @@
 
     #video-controls {
       text-align: center;
-      display: block;
     }
 
     #camera-on {
@@ -155,11 +154,12 @@
     type="video/mp4" />
   </video> -->
 
+  <div id="video-controls">
+    <button id="camera-on">Start Camera</button>
+    <button id="camera-off">Stop Camera</button>
+  </div>
   <div id="own-video-grid">
-    <div id="video-controls">
-      <div id="camera-on">Start Camera</div>
-      <div id="camera-off">Stop Camera</div>
-    </div>
+
   </div>
   <div id="video-grid">
   </div>
