--- a/views/room.ejs
+++ b/views/room.ejs
@@ -154,10 +154,12 @@
     type="video/mp4" />
   </video> -->
 
-  <div id="video-controls">
+  <!-- <div id="video-controls">
     <button id="camera-on">Start Camera</button>
     <button id="camera-off">Stop Camera</button>
-  </div>
+  </div> -->
+
+
   <div id="own-video-grid">
 
   </div>
