--- a/views/room.ejs
+++ b/views/room.ejs
@@ -8,7 +8,6 @@
   <script>
     const ROOM_ID = "<%= roomId %>"
   </script>
-
   <script src="https://unpkg.com/peerjs@1.3.1/dist/peerjs.min.js" defer></script>
   <script src="/socket.io/socket.io.js" defer></script>
   <script src="script.js" defer></script>
@@ -140,11 +139,11 @@
 
 <body>
   <div id='header'>Welcome to Live streaming using Node js</div>
-  <!-- <div id="screen-share">
+  <div id="screen-share">
     <p>Click the Start Capture button to begin.</p>
     <p><button id="start">Start Capture</button>&nbsp;<button id="stop">Stop Capture</button></p>
     <video id="video" autoplay></video>
-  </div> -->
+  </div>
 
   <!-- <video id="my-video" class="video-js vjs-theme-city" controls preload="auto"
   poster="https://image.shutterstock.com/image-vector/vector-live-stream-icon-flat-260nw-1282569241.jpg"
@@ -160,11 +159,8 @@
   </div> -->
 
 
-  <div id="own-video-grid">
-
-  </div>
-  <div id="video-grid">
-  </div>
+  <div id="own-video-grid"></div>
+  <div id="video-grid"></div>
 </body>
 
 </html>
