--- a/views/room.ejs
+++ b/views/room.ejs
@@ -142,7 +142,7 @@
   <div id="screen-share">
     <p>Click the Start Capture button to begin.</p>
     <p><button id="start">Start Capture</button>&nbsp;<button id="stop">Stop Capture</button></p>
-    <!-- <video id="video" autoplay></video> -->
+    <video id="video" autoplay></video>
   </div>
   <!-- <video id="my-video" class="video-js vjs-theme-city" controls preload="auto"
   poster="https://image.shutterstock.com/image-vector/vector-live-stream-icon-flat-260nw-1282569241.jpg"
