--- a/views/room.ejs
+++ b/views/room.ejs
@@ -62,6 +62,7 @@
       display: grid;
       grid-template-columns: repeat(auto-fill, 300px);
       grid-auto-rows: 300px;
+      margin: 0px auto;
     }
 
     #video-grid #my-video {
