--- a/views/room.ejs
+++ b/views/room.ejs
@@ -19,7 +19,7 @@
   <style>
     body {
       margin: 0px;
-      padding: 0px;
+      padding-bottom: 0px;
       font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
     }
 
