--- a/views/room.ejs
+++ b/views/room.ejs
@@ -19,7 +19,8 @@
   <style>
     body {
       margin: 0px;
-      padding-bottom: 0px;
+      padding: 0px;
+      padding-bottom: 20px !important;
       font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
     }
 
@@ -65,11 +66,11 @@
       padding: 15px;
     }
 
-    @media(max-width:767px) {
+    /* @media(max-width:767px) {
       #video-grid {
         grid-auto-rows: 200px;
       }
-    }
+    } */
 
     #video-grid #my-video {
       height: 300px;
