--- a/views/room.ejs
+++ b/views/room.ejs
@@ -20,7 +20,6 @@
     body {
       margin: 0px;
       padding: 0px;
-      padding-bottom: 20px !important;
       font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
     }
 
@@ -63,7 +62,7 @@
       display: grid;
       grid-template-columns: repeat(auto-fill, 300px);
       grid-auto-rows: 300px;
-      padding: 15px;
+      /* padding: 15px; */
     }
 
     /* @media(max-width:767px) {
