--- a/views/room.ejs
+++ b/views/room.ejs
@@ -62,7 +62,7 @@
       display: grid;
       grid-template-columns: repeat(auto-fill, 300px);
       grid-auto-rows: 300px;
-      /* padding: 15px; */
+      padding: 15px;
     }
 
     /* @media(max-width:767px) {
