--- a/views/room.ejs
+++ b/views/room.ejs
@@ -112,7 +112,6 @@
       border-radius: 4px;
     }
 
-
     #stop {
       background: red;
       color: white;
@@ -133,7 +132,6 @@
       border-radius: 4px;
     }
 
-
     #camera-off {
       background: red;
       color: white;
@@ -148,7 +146,8 @@
   <div id='header'>Welcome to Live streaming using Node js</div>
   <div id="screen-share">
     <p>Click the Start Capture button to begin.</p>
-    <p><button id="start">Start Capture</button>&nbsp;<button id="stop">Stop Capture</button></p>
+    <p><button id="start">Start Sharing</button>&nbsp;<button id="stop">Stop Sharing</button></p>
+    <p><button id="camera-on">Camera on</button>&nbsp;<button id="camera-off">Camera off</button></p>
     <video id="video" autoplay></video>
   </div>
   <!-- <video id="my-video" class="video-js vjs-theme-city" controls preload="auto"
