--- a/views/room.ejs
+++ b/views/room.ejs
@@ -142,7 +142,9 @@
     <p><button id="start">Start Sharing</button>&nbsp;<button id="camera-on">Camera on</button></p>
   </div>
 
-  <div id="own-video-grid"></div>
+  <div id="own-video-grid">
+    <video id="own" autoplay playsinline></video>
+  </div>
   <div id="video-grid"></div>
 
 </body>
