--- a/views/room.ejs
+++ b/views/room.ejs
@@ -145,7 +145,9 @@
   <div id="own-video-grid">
     <video id="own" autoplay playsinline></video>
   </div>
-  <div id="video-grid"></div>
+  <div id="video-grid">
+    <video id="others" autoplay playsinline></video>
+  </div>
 
 </body>
 
