--- a/views/room.ejs
+++ b/views/room.ejs
@@ -11,10 +11,6 @@
   <script src="https://unpkg.com/peerjs@1.3.1/dist/peerjs.min.js" defer></script>
   <script src="/socket.io/socket.io.js" defer></script>
   <script src="script.js" defer></script>
-  <!-- <link href="https://vjs.zencdn.net/7.10.2/video-js.css" rel="stylesheet" />
-  <script src="https://vjs.zencdn.net/7.10.2/video.min.js"></script>
-  <link href="https://unpkg.com/video.js@7/dist/video-js.min.css" rel="stylesheet" />
-  <link href="https://unpkg.com/@videojs/themes@1/dist/city/index.css" rel="stylesheet" /> -->
   <title>Video Calling Website</title>
   <style>
     body {
@@ -46,16 +42,10 @@
       }
     }
 
-    #own-video-grid video {
+    #own {
       height: 100%;
       width: 100%;
       object-fit: contain;
-    }
-
-
-    #own-video-grid #my-video {
-      height: 400px;
-      width: 800px;
     }
 
     #video-grid {
@@ -65,39 +55,18 @@
       padding: 15px;
     }
 
-    /* @media(max-width:767px) {
+    @media(max-width:767px) {
       #video-grid {
         grid-auto-rows: 200px;
       }
-    } */
-
-    #video-grid #my-video {
-      height: 300px;
-      width: 300px;
     }
 
-    video {
-      width: 100%;
-      height: 100%;
-      object-fit: cover;
+    #others {
+      object-fit: contain;
     }
 
     #screen-share {
       text-align: center;
-    }
-
-    #video {
-      width: 90%;
-      height: 500px;
-      border: 1px solid;
-      display: block;
-      margin: 0px auto;
-    }
-
-    @media(max-width: 565px) {
-      #video {
-        height: 400px;
-      }
     }
 
     .screen-share {
@@ -118,10 +87,6 @@
       border: 1px solid red !important;
       padding: 10px 20px !important;
       border-radius: 4px !important;
-    }
-
-    #video-controls {
-      text-align: center;
     }
 
     #camera-on {
@@ -146,7 +111,7 @@
     <video id="own" autoplay playsinline></video>
   </div>
   <div id="video-grid">
-    <video id="others" autoplay playsinline></video>
+    <video id="others" class="d-none" playsinline></video>
   </div>
 
 </body>
