--- a/views/room.ejs
+++ b/views/room.ejs
@@ -49,9 +49,9 @@
     }
 
     #video-grid {
-      display: grid;
+      /* display: grid;
       grid-template-columns: repeat(auto-fill, 300px);
-      grid-auto-rows: 300px;
+      grid-auto-rows: 300px; */
       padding: 15px;
     }
 
@@ -63,6 +63,9 @@
 
     #others {
       object-fit: contain;
+      display: grid;
+      grid-template-columns: repeat(auto-fill, 300px);
+      grid-auto-rows: 300px;
     }
 
     #screen-share {
