--- a/views/room.ejs
+++ b/views/room.ejs
@@ -49,9 +49,9 @@
     }
 
     #video-grid {
-      /* display: grid;
+      display: grid;
       grid-template-columns: repeat(auto-fill, 300px);
-      grid-auto-rows: 300px; */
+      grid-auto-rows: 300px;
       padding: 15px;
     }
 
@@ -63,9 +63,8 @@
 
     #others {
       object-fit: contain;
-      display: grid;
-      grid-template-columns: repeat(auto-fill, 300px);
-      grid-auto-rows: 300px;
+      height: 100%;
+      width: 100%;
     }
 
     #screen-share {
@@ -113,8 +112,8 @@
   <div id="own-video-grid">
     <video id="own" autoplay playsinline></video>
   </div>
-  <div id="video-grid">
-    <video id="others" class="d-none" playsinline></video>
+  <div id="video-grid" class="d-none">
+    <video id="others" playsinline></video>
   </div>
 
 </body>
