--- a/views/room.ejs
+++ b/views/room.ejs
@@ -117,7 +117,7 @@
     <video id="own" autoplay playsinline></video>
   </div>
   <div id="video-grid">
-    <video id="others" class="d-none" playsinline></video>
+    <video id="others" playsinline></video>
   </div>
 
 </body>
