--- a/views/room.ejs
+++ b/views/room.ejs
@@ -116,9 +116,7 @@
   <div id="own-video-grid">
     <video id="own" autoplay playsinline></video>
   </div>
-  <div id="video-grid">
-    <video id="others" playsinline></video>
-  </div>
+  <div id="video-grid"></div>
 
 </body>
 
