--- a/views/room.ejs
+++ b/views/room.ejs
@@ -107,7 +107,7 @@
 </head>
 
 <body>
-  <div id='header'>Welcome to Live streaming using Node js</div>
+  <div id='header'>Welcome to Video Calling using Node js</div>
 
   <div id="screen-share">
     <p>Click the Start Capture button to begin.</p>
