--- a/views/room.ejs
+++ b/views/room.ejs
@@ -103,6 +103,13 @@
     .d-none {
       display: none;
     }
+
+    #captureStream video {
+      display: grid;
+      grid-template-columns: repeat(auto-fill, 300px);
+      grid-auto-rows: 300px;
+      padding: 15px;
+    }
   </style>
 </head>
 
@@ -116,10 +123,11 @@
 
   <div id="own-video-grid">
     <video id="own" autoplay playsinline></video>
-
   </div>
+
   <div id="video-grid"></div>
 
+  <div id="captureStream"></div>
 </body>
 
 </html>
