--- a/views/room.ejs
+++ b/views/room.ejs
@@ -104,7 +104,7 @@
       display: none;
     }
 
-    #captureStream video {
+    #captureStream {
       display: grid;
       grid-template-columns: repeat(auto-fill, 300px);
       grid-auto-rows: 300px;
