--- a/views/room.ejs
+++ b/views/room.ejs
@@ -51,8 +51,8 @@
 
     #video-grid {
       display: grid;
-      grid-template-columns: repeat(auto-fill, 300px);
-      grid-auto-rows: 300px;
+      grid-template-columns: repeat(auto-fill, 200px);
+      grid-auto-rows: 200px;
       padding: 15px;
     }
 
@@ -106,9 +106,15 @@
 
     #captureStream {
       display: grid;
-      grid-template-columns: repeat(auto-fill, 300px);
-      grid-auto-rows: 300px;
+      grid-template-columns: repeat(auto-fill, 200px);
+      grid-auto-rows: 200px;
       padding: 15px;
+    }
+
+    #captureStream video {
+      height: 100%;
+      weight: 100%;
+      object-fit: cover;
     }
   </style>
 </head>
