--- a/views/room.ejs
+++ b/views/room.ejs
@@ -113,7 +113,7 @@
 
     #captureStream video {
       height: 100%;
-      weight: 100%;
+      width: 100%;
       object-fit: cover;
     }
   </style>
