--- a/views/home.ejs
+++ b/views/home.ejs
@@ -29,7 +29,7 @@
 
 <body>
     <div id='header'>Welcome to Live streaming using Node js</div>
-    <video id="capture"></video>
+    <div id="captureStream"></div>
 
 
 </body>
