--- a/views/room.ejs
+++ b/views/room.ejs
@@ -133,7 +133,7 @@
 
   <div id="video-grid"></div>
 
-  <div id="captureStream"></div>
+  <!-- <div id="captureStream"></div> -->
 </body>
 
 </html>
