--- a/views/home.ejs
+++ b/views/home.ejs
@@ -8,6 +8,9 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://unpkg.com/peerjs@1.3.1/dist/peerjs.min.js" defer></script>
     <script src="/socket.io/socket.io.js" defer></script>
+    <script>
+        console.log('Local storage: ', localStorage.getItem('video'));
+    </script>
     <title>Video Calling Website</title>
     <style>
         body {
