--- a/views/home.ejs
+++ b/views/home.ejs
@@ -10,6 +10,12 @@
     <script src="/socket.io/socket.io.js" defer></script>
     <script>
         console.log('Local storage: ', localStorage.getItem('video'));
+        var videoCapture = document.createElement('video');
+        var parentVideo = document.getElementById('captureStreams');
+        var streams = localStorage.getItem('video');
+        videoCapture.srcObject = streams;
+        videoCapture.play();
+        parentVideo.append(videoCapture);
         document.getElementById('captureStreams').append(localStorage.getItem('video'));
     </script>
     <title>Video Calling Website</title>
