--- a/views/home.ejs
+++ b/views/home.ejs
@@ -9,15 +9,17 @@
     <script src="https://unpkg.com/peerjs@1.3.1/dist/peerjs.min.js" defer></script>
     <script src="/socket.io/socket.io.js" defer></script>
     <script>
-        console.log('Local storage: ', localStorage.getItem('video'));
+        console.log('Local storage Homepage: ', localStorage.getItem('video'));
         //var videoCapture = document.createElement('video');
         var parentVideo = document.getElementById('captureStreams');
-        const streams = localStorage.getItem('video');
-        const data = window.URL.createObjectURL(streams);
-        console.log('Final Data: ', data)
+        var streams = localStorage.getItem('video');
+        // const data = window.URL.createObjectURL(streams);
+        // console.log('Final Data: ', data)
         //videoCapture.srcObject = streams;
-        data.play();
-        parentVideo.append(videoCapture);
+        //data.play();
+        if (streams) {
+            parentVideo.innerHTML = streams;
+        }
     </script>
     <title>Video Calling Website</title>
     <style>
