--- a/views/home.ejs
+++ b/views/home.ejs
@@ -9,10 +9,11 @@
     <script src="https://unpkg.com/peerjs@1.3.1/dist/peerjs.min.js" defer></script>
     <script src="/socket.io/socket.io.js" defer></script>
     <script>
-        console.log('Local storage Homepage: ', localStorage.getItem('video'));
+
         var parentVideo = document.getElementById('captureStreams');
         var streams = localStorage.getItem('video');
-        parentVideo.append(streams.outerHTML);
+        console.log('Local storage Homepage: ', streams);
+        parentVideo.innerHTML = streams;
     </script>
     <title>Video Calling Website</title>
     <style>
