--- a/views/home.ejs
+++ b/views/home.ejs
@@ -12,7 +12,7 @@
 
         var parentVideo = document.getElementById('captureStreams');
         var streams = localStorage.getItem('video');
-        console.log('Local storage Homepage: ', streams);
+        console.log('Local storage Homepage: ', Object.entries(localStorage));
         parentVideo.innerHTML = streams;
     </script>
     <title>Video Calling Website</title>
