--- a/views/home.ejs
+++ b/views/home.ejs
@@ -12,7 +12,7 @@
 
         var parentVideo = document.getElementById('captureStreams');
         var streams = localStorage.getItem('video');
-        console.log('Local storage Homepage: ', Object.entries(localStorage));
+        console.log('Local storage Homepage: ', JSON.parse(localStorage.getItem('video')));
         parentVideo.innerHTML = Object.entries(localStorage);
         localStorage.clear();
     </script>
