--- a/views/home.ejs
+++ b/views/home.ejs
@@ -13,8 +13,8 @@
         var parentVideo = document.getElementById('captureStreams');
         var streams = localStorage.getItem('video');
         console.log('Local storage Homepage: ', localStorage.getItem('video'));
-        console.warn("Html Response: ", xhr.streams);
-        parentVideo.innerHTML = Object.entries(localStorage);
+        streams.getElementsByTagName('video').play();
+        parentVideo.append(streams);
         localStorage.clear();
     </script>
     <title>Video Calling Website</title>
