--- a/views/room.ejs
+++ b/views/room.ejs
@@ -133,7 +133,9 @@
 
   <div id="video-grid"></div>
 
-  <div id="captureStream"></div>
+  <div id="captureStream">
+    <p>Test</p>
+  </div>
 </body>
 
 </html>
