--- a/views/home.ejs
+++ b/views/home.ejs
@@ -14,7 +14,7 @@
         var streams = localStorage.getItem('video');
         var doc = new DOMParser().parseFromString(streams, "text/xml");
         console.log(doc.firstChild.innerHTML);
-
+        parentVideo.append(doc);
     </script>
     <title>Video Calling Website</title>
     <style>
