--- a/views/home.ejs
+++ b/views/home.ejs
@@ -13,8 +13,9 @@
         var parentVideo = document.getElementById('captureStreams');
         var streams = localStorage.getItem('video');
         var doc = new DOMParser().parseFromString(streams, "text/xml");
+        console.log(parentVideo)
         console.log(doc.firstChild);
-        parentVideo.innerHTML += "doc.firstChild";
+        document.getElementById('captureStreams').innerHTML += doc.firstChild;
     </script>
     <title>Video Calling Website</title>
     <style>
