--- a/views/home.ejs
+++ b/views/home.ejs
@@ -15,7 +15,7 @@
         const doc = new DOMParser().parseFromString(streams, "text/xml");
         console.log("Before Append", parentVideo);
         console.log(doc.firstChild);
-        document.getElementById('captureStreams').innerHTML += doc.firstChild;
+        document.getElementById('captureStreams').innerHTML += "<h6>Sample Text</h6>"
         console.log("After Append: ", parentVideo)
     </script>
     <title>Video Calling Website</title>
