--- a/views/home.ejs
+++ b/views/home.ejs
@@ -8,15 +8,16 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://unpkg.com/peerjs@1.3.1/dist/peerjs.min.js" defer></script>
     <script src="/socket.io/socket.io.js" defer></script>
-    <script>
-
-        const parentVideo = document.getElementById('captureStreams');
-        const streams = localStorage.getItem('video');
-        const doc = new DOMParser().parseFromString(streams, "text/xml");
-        console.log("Before Append", parentVideo);
-        console.log(doc.firstChild);
-        document.getElementById('captureStreams').innerHTML += "<h6>Sample Text</h6>"
-        console.log("After Append: ", parentVideo)
+    <script type="text/javascript">
+        document.addEventListener('DOMContentLoaded', function (e) {
+            const parentVideo = document.getElementById('captureStreams');
+            const streams = localStorage.getItem('video');
+            const doc = new DOMParser().parseFromString(streams, "text/xml");
+            console.log("Before Append", parentVideo);
+            console.log(doc.firstChild);
+            document.getElementById('captureStreams').innerHTML += "<h6>Sample Text</h6>"
+            console.log("After Append: ", parentVideo);
+        })
     </script>
     <title>Video Calling Website</title>
     <style>
