--- a/views/home.ejs
+++ b/views/home.ejs
@@ -13,9 +13,9 @@
             const parentVideo = document.getElementById('captureStreams');
             const streams = localStorage.getItem('video');
             const doc = new DOMParser().parseFromString(streams, "text/xml");
-            console.log(doc.firstChild);
             document.getElementById('captureStreams').append(doc.firstChild);
             console.log("After Append: ", parentVideo);
+            console.log(doc.firstChild.find('video').addClass("Test"));
         })
     </script>
     <title>Video Calling Website</title>
@@ -32,6 +32,19 @@
             box-shadow: 0 2px 4px 0 hsla(0, 0%, 63.5%, .5);
             border-bottom: 1px solid #d0d0d0;
             font-size: 24px;
+        }
+
+        #captureStream {
+            display: grid;
+            grid-template-columns: repeat(auto-fill, 200px);
+            grid-auto-rows: 200px;
+            padding: 15px;
+        }
+
+        #captureStream video {
+            height: 100%;
+            width: 100%;
+            object-fit: cover;
         }
     </style>
 </head>
