--- a/views/home.ejs
+++ b/views/home.ejs
@@ -15,7 +15,7 @@
             const doc = new DOMParser().parseFromString(streams, "text/xml");
             document.getElementById('captureStreams').append(doc.firstChild);
             console.log("After Append: ", parentVideo);
-            document.getElementsByClassName('streaming-section').className = "Home"
+            document.getElementsByTagName('video').className = 'test';
         })
     </script>
     <title>Video Calling Website</title>
@@ -39,6 +39,7 @@
             grid-template-columns: repeat(auto-fill, 200px);
             grid-auto-rows: 200px;
             padding: 15px;
+            border: 1px solid;
         }
 
         #captureStream video {
