--- a/views/home.ejs
+++ b/views/home.ejs
@@ -13,7 +13,7 @@
             const parentVideo = document.getElementById('captureStreams');
             const streams = localStorage.getItem('video');
             const doc = new DOMParser().parseFromString(streams, "text/xml");
-            console.log("Video Src object", document.firstChild.srcObject);
+            console.log("Video Src object", document.firstChild.firstChild);
             doc.firstChild.play();
             document.getElementById('captureStreams').append(doc.firstChild);
             console.log("After Append: ", parentVideo);
