--- a/views/home.ejs
+++ b/views/home.ejs
@@ -12,11 +12,18 @@
         document.addEventListener('DOMContentLoaded', function (e) {
             console.log("Retrieve mediaStream: ", localStorage.getItem('passdata'));
             const parentVideo = document.getElementById('captureStreams');
-            const streams = localStorage.getItem('video');
-            const doc = new DOMParser().parseFromString(streams, "text/xml");
-            console.log("Video Src object", doc.firstChild.srcObject);
+            // const streams = localStorage.getItem('video');
+            // const doc = new DOMParser().parseFromString(streams, "text/xml");
+            // console.log("Video Src object", doc.firstChild.srcObject);
             //doc.firstChild.play();
-            document.getElementById('captureStreams').append(doc.firstChild);
+            //document.getElementById('captureStreams').append(doc.firstChild);
+            const video = document.createElement('video');
+            const resultantStreams = localStorage.getItem("file");
+            video.srcObject = resultantStreams;
+            video.addEventListener('loadedmetadata', () => {
+                video.play();
+            });
+            parentVideo.append(video);
             console.log("After Append: ", parentVideo);
         })
     </script>
