--- a/views/home.ejs
+++ b/views/home.ejs
@@ -27,13 +27,12 @@
             console.log('File reader result: ', resultantStreams);
             var blob = new Blob([resultantStreams], { type: "video/webm" });
             console.log('Blob converted Result: ', blob);
+            video.src = null;
+            video.srcObject = null;
             video.src = URL.createObjectURL(blob);
             video.controls = true;
             video.muted = true;
-            //video.play();
-            video.addEventListener('loadedmetadata', () => {
-                video.play();
-            });
+            video.play();
             parentVideo.append(video);
             console.log("After Append: ", parentVideo);
         })
