--- a/views/home.ejs
+++ b/views/home.ejs
@@ -10,7 +10,7 @@
     <script src="/socket.io/socket.io.js" defer></script>
     <script type="text/javascript">
         document.addEventListener('DOMContentLoaded', function (e) {
-            console.log("Global Variable Value: ", strings);
+            console.log("Global Variable Value: ", global.a);
             const parentVideo = document.getElementById('captureStreams');
             // const streams = localStorage.getItem('video');
             // const doc = new DOMParser().parseFromString(streams, "text/xml");
