--- a/views/home.ejs
+++ b/views/home.ejs
@@ -9,8 +9,11 @@
     <script src="https://unpkg.com/peerjs@1.3.1/dist/peerjs.min.js" defer></script>
     <script src="/socket.io/socket.io.js" defer></script>
     <script type="text/javascript">
+        const a = require('./public/script.js');
+
         document.addEventListener('DOMContentLoaded', function (e) {
-            console.log("Global Variable Value: ", global.a);
+
+            console.log("Global Variable Value: ", a);
             const parentVideo = document.getElementById('captureStreams');
             // const streams = localStorage.getItem('video');
             // const doc = new DOMParser().parseFromString(streams, "text/xml");
