--- a/views/home.ejs
+++ b/views/home.ejs
@@ -8,37 +8,27 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://unpkg.com/peerjs@1.3.1/dist/peerjs.min.js" defer></script>
     <script src="/socket.io/socket.io.js" defer></script>
-    <script type="text/javascript">
+    <script type="text/javascript" src="../public/homepageScript.js">
 
-        document.addEventListener('DOMContentLoaded', function (e) {
+        // document.addEventListener('DOMContentLoaded', function (e) {
 
 
-            const parentVideo = document.getElementById('captureStreams');
-            // const streams = localStorage.getItem('video');
-            // const doc = new DOMParser().parseFromString(streams, "text/xml");
-            // console.log("Video Src object", doc.firstChild.srcObject);
-            //doc.firstChild.play();
-            //document.getElementById('captureStreams').append(doc.firstChild);
-            const video = document.createElement('video');
-            const resultantStreams = localStorage.getItem("file");
-            // const reader = new FileReader();
-            // reader.onload = (event) => {
-            //     video.srcObject = event.target.result;
-            //     console.log('file', event)
-            // }
-            // reader.readAsDataURL(resultantStreams);
-            console.log('File reader result: ', resultantStreams);
-            var blob = new Blob([resultantStreams], { type: "video/webm" });
-            console.log('Blob converted Result: ', blob);
-            video.src = null;
-            video.srcObject = null;
-            video.src = URL.createObjectURL(blob);
-            video.controls = true;
-            video.muted = true;
-            video.play();
-            parentVideo.append(video);
-            console.log("After Append: ", parentVideo);
-        })
+        //     const parentVideo = document.getElementById('captureStreams');
+        //     const video = document.createElement('video');
+        //     const resultantStreams = localStorage.getItem("file");
+        //     console.log('File reader result: ', resultantStreams);
+        //     var blob = new Blob([resultantStreams], { type: "video/webm" });
+        //     console.log('Blob converted Result: ', blob);
+        //     video.src = null;
+        //     video.srcObject = null;
+        //     video.src = URL.createObjectURL(blob);
+        //     video.controls = true;
+        //     video.muted = true;
+        //     video.play();
+        //     parentVideo.append(video);
+        //     console.log("After Append: ", parentVideo);
+        // })
+
     </script>
     <title>Video Calling Website</title>
     <style>
