--- a/views/home.ejs
+++ b/views/home.ejs
@@ -8,7 +8,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://unpkg.com/peerjs@1.3.1/dist/peerjs.min.js" defer></script>
     <script src="/socket.io/socket.io.js" defer></script>
-    <script type="text/javascript" src="homepageScript.js">
+    <script src="homepageScript.js" defer>
 
         // document.addEventListener('DOMContentLoaded', function (e) {
 
