create gcloud post call

--- a/views/room.ejs
+++ b/views/room.ejs
@@ -122,18 +122,21 @@
 <body>
   <div id='header'>Welcome to Video Calling using Node js</div>
 
-  <div id="screen-share">
+  <!-- <div id="screen-share">
     <p>Click the Start Capture button to begin.</p>
     <p><button id="start">Start Sharing</button>&nbsp;<button id="camera-on">Camera on</button></p>
-  </div>
+  </div> -->
 
   <div id="own-video-grid">
     <video id="own" autoplay playsinline></video>
   </div>
 
-  <div id="video-grid"></div>
+  <div id="video-grid">
+    Other Calls
+  </div>
 
   <div id="captureStream">
+    Capture Streams
   </div>
 
   <div id="recorder"></div>
