--- a/views/room.ejs
+++ b/views/room.ejs
@@ -11,7 +11,7 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <script src="https://unpkg.com/peerjs@1.3.1/dist/peerjs.min.js" defer></script>
   <script src="/socket.io/socket.io.js" defer></script>
-  <!-- <script src="script.js" defer type="module"></script> -->
+  <script src="script.js" defer type="module"></script>
   <title>Video Calling Website</title>
   <style>
     body {
