--- a/views/home.ejs
+++ b/views/home.ejs
@@ -44,7 +44,7 @@
 
 <body>
     <div id='header'>Welcome to Live streaming using Node js</div>
-
+    <iframe src="room.ejs" frameborder="0"></iframe>
     <div id="captureStreams"></div>
 </body>
 
