create gcloud post call

--- a/views/room.ejs
+++ b/views/room.ejs
@@ -138,7 +138,7 @@
   <div id="captureStream">
     Capture Streams
   </div>
-
+  <div id="StreamValues" style="display: none;"></div>
   <div id="recorder"></div>
 </body>
 
