--- a/views/room.ejs
+++ b/views/room.ejs
@@ -8,10 +8,11 @@
   <script>
     const ROOM_ID = "<%= roomId %>"
   </script>
-  <script defer src="https://unpkg.com/peerjs@1.2.0/dist/peerjs.min.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+  <script src="https://unpkg.com/peerjs@1.3.1/dist/peerjs.min.js" defer></script>
   <script src="/socket.io/socket.io.js" defer></script>
-  <script src="script.js" defer></script>
-  <title>Document</title>
+  <script src="script.js" defer type="module"></script>
+  <title>Video Calling Website</title>
   <style>
     body {
       margin: 0px;
@@ -27,23 +28,118 @@
       font-size: 24px;
     }
 
-    #video-grid {
-      display: grid;
-      grid-template-columns: repeat(auto-fill, 300px);
-      grid-auto-rows: 300px;
+    #own-video-grid {
+      display: block;
+      margin: 0px auto;
+      height: 400px;
+      width: 800px;
+      background: black;
     }
 
-    video {
-      width: 100%;
+    @media(max-width:767px) {
+      #own-video-grid {
+        height: 250px;
+        width: 300px;
+      }
+    }
+
+    #own {
       height: 100%;
+      width: 100%;
+      object-fit: contain;
+    }
+
+    #video-grid {
+      display: grid;
+      grid-template-columns: repeat(auto-fill, 200px);
+      grid-auto-rows: 200px;
+      padding: 15px;
+    }
+
+    @media(max-width:767px) {
+      #video-grid {
+        grid-auto-rows: 200px;
+      }
+    }
+
+    #others {
+      object-fit: contain;
+      height: 100%;
+      width: 100%;
+    }
+
+    #screen-share {
+      text-align: center;
+    }
+
+    .screen-share {
+      display: block !important;
+    }
+
+    #start {
+      background: limegreen;
+      color: white;
+      border: 1px solid limegreen;
+      padding: 10px 20px;
+      border-radius: 4px;
+    }
+
+    .stop {
+      background: red !important;
+      color: white !important;
+      border: 1px solid red !important;
+      padding: 10px 20px !important;
+      border-radius: 4px !important;
+    }
+
+    #camera-on {
+      background: limegreen;
+      color: white;
+      border: 1px solid limegreen;
+      padding: 10px 20px;
+      border-radius: 4px;
+    }
+
+    .d-none {
+      display: none;
+    }
+
+    #captureStream {
+      display: grid;
+      grid-template-columns: repeat(auto-fill, 200px);
+      grid-auto-rows: 200px;
+      padding: 15px;
+    }
+
+    #captureStream video {
+      height: 100%;
+      width: 100%;
       object-fit: cover;
     }
   </style>
 </head>
 
 <body>
-  <div id='header'>Welcome to Live streaming using Node js</div>
-  <div id="video-grid"></div>
+  <div id='header'>Welcome to Video Calling using Node js</div>
+
+  <!-- <div id="screen-share">
+    <p>Click the Start Capture button to begin.</p>
+    <p><button id="start">Start Sharing</button>&nbsp;<button id="camera-on">Camera on</button></p>
+  </div> -->
+
+  <div id="own-video-grid">
+    <video id="own" autoplay playsinline></video>
+  </div>
+
+  <div id="video-grid">
+    Other Calls
+  </div>
+
+  <div id="captureStream">
+    Capture Streams
+  </div>
+  <div id="StreamValues"></div>
+  <div id="recorder"></div>
 </body>
 
 </html>
