--- a/views/index.ejs
+++ b/views/index.ejs
@@ -13,6 +13,10 @@
     <script src="/socket.io/socket.io.js" defer></script>
     <script src='index.js'></script>
     <style>
+        .CTA-sections{
+            margin: 50px auto;
+            text-align: center
+        }
         #call {
             background: limegreen;
             color: white;
@@ -43,7 +47,7 @@
 </head>
 
 <body>
-    <p style="text-align: center;margin: 50px"><a id='call'>Join Video Call</a><a id='stream'>Watch Streaming</a>
+    <p class="CTA-sections" ><a id='call'>Join Video Call</a><a id='stream'>Watch Streaming</a>
     </p>
 </body>
 
